finished Design for Login

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -27,10 +27,10 @@
           <div class="forgot-password">
               <a href="#">Forgot?</a>
           </div>
-          <button type="submit" class="btn">Login now</button>
+          <a href="Home.html" type="submit" class="btn">Login now</a>
       </form>
       <div class="signup-link">
-          Don't Have An Account? <a href="#">Sign Up</a>
+          Don't Have An Account? <a href="Register.html">Sign Up</a>
       </div>
   </div>
   </body>
