finished Design for register

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -11,6 +11,10 @@
     <title>Traderoo</title>
   </head>
   <body>
+    <div class="Pagetitle">
+      <p>Traderoo</p>
+    </div>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <div class="login-container">
