--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -10,6 +10,9 @@
     <title>Traderoo</title>
   </head>
   <body>
+    <div class="Pagetitle">
+        <p>Traderoo</p>
+      </div>
     <div class="container">
         <div class="left-panel">
             <h1>Welcome to Traderoo.</h1>
@@ -19,6 +22,10 @@
             <h2>Create an account</h2>
             <form>
                 <div class="form-group">
+                    <label for="email">Username</label>
+                    <input type="email" id="email" placeholder="test" required />
+                </div>
+                <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" placeholder="balamia@gmail.com" required />
                 </div>
@@ -26,14 +33,14 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Enter your password" required />
                 </div>
-                <button type="submit" class="btn">Create account</button>
+                <button href="index.html" type="submit" class="btn">Create account</button>
                 <div class="google-btn">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google logo" />
+                    <img src="../transparent-background-google-logo-login-5.png" alt="Google logo" />
                     Continue with Google
                 </div>
             </form>
             <div class="login-link">
-                Already Have An Account? <a href="#">Log In</a>
+                Already Have An Account? <a href="index.html">Log In</a>
             </div>
         </div>
     </div>
