--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -9,6 +9,7 @@
   <link href="Register.css" rel="stylesheet">
     <title>Traderoo</title>
   </head>
+  
   <body>
     <div class="Pagetitle">
         <p>Traderoo</p>
@@ -22,8 +23,8 @@
             <h2>Create an account</h2>
             <form>
                 <div class="form-group">
-                    <label for="email">Username</label>
-                    <input type="email" id="email" placeholder="test" required />
+                    <label for="Username">Username</label>
+                    <input type="text" id="Username" placeholder="test" required />
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
@@ -33,12 +34,14 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Enter your password" required />
                 </div>
-                <button href="index.html" type="submit" class="btn">Create account</button>
+                <button href="index.html" type="submit" id="registerButton" class="btn">Create account</button>
                 <div class="google-btn">
                     <img src="../transparent-background-google-logo-login-5.png" alt="Google logo" />
                     Continue with Google
                 </div>
             </form>
+            <p id="message"></p>
+            <script src="register.js"></script>
             <div class="login-link">
                 Already Have An Account? <a href="index.html">Log In</a>
             </div>
