finished Home page

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <link href="Home.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
   <style>
     a:hover {
       color: black; /* Hover-Effekt */
@@ -20,5 +25,152 @@
     <a href="Create.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Create Trade</a>
     <a href="AboutUs.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">About us</a>
   </nav>
+
+
+  
+  <div class="mostviewed">
+    <div class="mostviewed-div">
+        <h1>Most Viewed Trades Today</h1>
+        <p>An eco-friendly way to discover unique pieces and help save the planet, one trade at a time</p>
+        <a class="example-btn2">See more -></a>
+    </div>
+    <div class="mostviewed-img">
+        <div class="table-container">
+            <img class="table" src="../table.jpg">
+            <ul>
+                <li>RIMOWA Vintage Suitcase</li>
+                <li >701 Views</li>
+            </ul>
+        </div>
+        <div class="table-container">
+            <img class="table" src="../table.jpg">
+            <ul>
+                <li>Ikea Table / Office Desk</li>
+                <li >432 Views</li>
+            </ul>
+        </div>
+        <div class="table-container">
+            <img class="table" src="../table.jpg">
+            <ul>
+                <li>Nightstand from 70s</li>
+                <li >213 Views</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="solutions">
+  <p class="heading"><strong>About us</strong></p>
+  <p class="subtitle">Trade now and protect the nature</p>
+
+  <div class="SolImg">
+      <div class="col">
+        <i class="fa-brands fa-docker fa-5x"></i>
+          <ul>
+              <li class="city">Easy Trades</li>
+              <li class="date">We connect you with countless opportunities for great trades, to help you find the perfect match.</li>
+          </ul>
+  </div>
+  
+  <div class=" col">
+    <i class="fa-brands fa-docker fa-5x"></i>
+      <ul>
+          <li class="city">Save the Planet</li>
+          <li class="date"> Reduce waste and your carbon footprint by trading pre-owned items instead of buying new ones.</li>
+      </ul>
+  
+  </div>
+  
+  <div class=" col">
+    <i class="fa-brands fa-docker fa-5x"></i>
+      <ul>
+          <li class="city">24/7 Support</li>
+          <li class="date">Get real-time support for any Traderoo inquiry 24/7 to ensure a smooth trading experience.</li>
+      </ul>
+
+  </div>
+</div>
+</div>
+
+<div class="companies">
+  <center>
+  <p class="title">Categories</p>
+  <p class="subtitle">Find what you are looking for</p>
+  </center>
+
+  <div class="mostviewed-img">
+    <div class="table-container">
+        <img class="table" src="../table.jpg">
+        <ul>
+            <li>Games & Entertainment</li>
+        </ul>
+    </div>
+    <div class="table-container">
+        <img class="table" src="../table.jpg">
+        <ul>
+            <li>Furniture & Living Essentials</li>
+            <li >Discover everything you need to create the perfect home environment.</li>
+        </ul>
+    </div>
+    <div class="table-container">
+        <img class="table" src="../table.jpg">
+        <ul>
+            <li>Sports & Fitness Equipment</li>
+        </ul>
+    </div>
+</div>
+ 
+  <center>
+  <a class="sol-btn">Explore</a>
+</center>
+</div>
+
+<div class="Feedback">
+  <center>
+  <p class="heading"><strong>Give Us Feedback</strong></p>
+  <p class="subtitle">We appreciate all feedback to help improve our page for your experience.</p>
+</center>
+
+<div class="contact-form">
+  <label for="name">Name</label>
+  <input type="text" id="name" placeholder="Your Name">
+  <label for="email">Email</label>
+  <input type="email" id="email" placeholder="Your Email">
+  <label for="message">Message</label>
+  <textarea id="message" rows="4" placeholder="Write a message to us"></textarea>
+  <button type="submit">Send</button>
+</div>
+
+</div>
+<div class="footer">
+  <div>
+      <h3>TRADEROO</h3>
+      <p>We help you find your dream trade</p>
+      <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
+      <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+      <p>Legal status: Sole proprietorship</p>
+  </div>
+  <div>
+      <h3>Information</h3>
+      <a href="#">About</a>
+      <a href="#">Product</a>
+      <a href="#">Blog</a>
+  </div>
+  <div>
+      <h3>Company</h3>
+      <a href="#">Team</a>
+      <a href="#">Out Idea</a>
+      <a href="#">Our story</a>
+  </div>
+  <div>
+      <h3>Contact</h3>
+      <a href="#">Feedback</a>
+      <a href="#">Pricing</a>
+      <a href="#">Resources</a>
+  </div>
+</div>
+
+
+</div>
 </body>
 </html>
