--- a/Pages/Item.html
+++ b/Pages/Item.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <link href="Item.css" rel="stylesheet">
   <title>Home</title>
   <style>
     a:hover {
@@ -21,4 +25,75 @@
     <a href="AboutUs.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">About us</a>
   </nav>
 </body>
+
+
+<div class="Itemdetail">
+  <center>
+  <p class="heading"><strong>Nightstand</strong></p>
+</center>
+  <div class="IteImg">
+    <div class="col">
+      <img class="table" src="../table.jpg">
+    </div>
+    <div class="col">
+      <div class="profile-card">
+        
+        <span class="profile-name">Markus Rieder</span>
+        <span class="rating">⭐ 4.5 (35)</span>
+    </div>
+    <div class="buttons">
+        <button class="btn">Ask a question</button>
+        <button class="btn">View Profile</button>
+    </div>
+    <div class="description">
+        Trading this modern, minimalist nightstand in excellent condition. Its got two drawers—perfect for storing your bedside essentials like books, chargers, or whatever you need to keep handy. The color is a light grey/off-white with a smooth matte finish, so it blends easily with most decor styles.
+    </div>
+    <div class="tags">
+        <span class="tag">#BedroomEssentials</span>
+        <span class="tag">#Decor</span>
+        <span class="tag">#Modern</span>
+        <span class="tag">#Storage</span>
+        <span class="tag">#Minimalist</span>
+        <span class="tag">#Nightstand</span>
+    </div>
+    <div class="product-info">
+        <div>Brand: Burrow</div>
+        <div>Weight: 12kg</div>
+        <div>Condition: like new</div>
+        <div>Height: 80cm</div>
+        <div>Width: 60cm</div>
+        <div>Depth: 50cm</div>
+    </div>
+    <div class="match-button">Match now with Markus</div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div>
+        <h3>TRADEROO</h3>
+        <p>We help you find your dream trade</p>
+        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p>Legal status: Sole proprietorship</p>
+    </div>
+    <div>
+        <h3>Information</h3>
+        <a href="#">About</a>
+        <a href="#">Product</a>
+        <a href="#">Blog</a>
+    </div>
+    <div>
+        <h3>Company</h3>
+        <a href="#">Team</a>
+        <a href="#">Out Idea</a>
+        <a href="#">Our story</a>
+    </div>
+    <div>
+        <h3>Contact</h3>
+        <a href="#">Feedback</a>
+        <a href="#">Pricing</a>
+        <a href="#">Resources</a>
+    </div>
+  </div>
+</div>
 </html>
