finished item page

--- a/Pages/Item.html
+++ b/Pages/Item.html
@@ -68,6 +68,48 @@
     </div>
   </div>
 
+  <h2 style="text-align: center;">Similar Trades</h2>
+    <div class="card-container">
+        <div class="card">
+            <img src="../table.jpg">
+            <h4>Table Lamp</h4>
+            <p>Warm shade, bought 2 years ago, cozy glow.</p>
+            <button class="match-button">Match</button>
+            <p>140 Views</p>
+        </div>
+        <div class="card">
+          <img src="../table.jpg">
+            <h4>Area Rug</h4>
+            <p>Soft, neutral rug with a small corner stain.</p>
+            <button class="match-button">Match</button>
+            <p>56 Views</p>
+        </div>
+        <div class="card">
+          <img src="../table.jpg">
+            <h4>Office Chair</h4>
+            <p>Ergonomic, 1 year old, adjustable height.</p>
+            <button class="match-button">Match</button>
+            <p>39 Views</p>
+        </div>
+        <div class="card">
+          <img src="../table.jpg">
+            <h4>Old Vase</h4>
+            <p>Sleek ceramic vase, perfect for decor.</p>
+            <button class="match-button">Match</button>
+            <p>170 Views</p>
+        </div>
+        <div class="card">
+          <img src="../table.jpg">
+            <h4>Old Vase</h4>
+            <p>Sleek ceramic vase, perfect for decor.</p>
+            <button class="match-button">Match</button>
+            <p>170 Views</p>
+        </div>
+    </div>
+
+
+
+
   <div class="footer">
     <div>
         <h3>TRADEROO</h3>
@@ -95,5 +137,6 @@
         <a href="#">Resources</a>
     </div>
   </div>
+  
 </div>
 </html>
