finished create page

--- a/Pages/Create.html
+++ b/Pages/Create.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <link href="Create.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
   <title>Home</title>
   <style>
     a:hover {
@@ -20,5 +25,73 @@
     <a href="Create.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Create Trade</a>
     <a href="AboutUs.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">About us</a>
   </nav>
+
+  <h1>Create Trade</h1>
+  <h2>Add trade information</h2>
+  <div class="container">
+      <div class="trade-info">
+          
+          <div class="input-group">
+              <label>Title</label>
+              <input type="text" placeholder="Trade title (e.g., Bookshelf)">
+          </div>
+          <div class="input-group">
+              <label>Description</label>
+              <textarea placeholder="Write a short description..."></textarea>
+          </div>
+          <div class="input-group">
+              <label>Brand</label>
+              <input type="text" placeholder="Brand (e.g., IKEA, Custom-made)">
+          </div>
+          <div class="measurements">
+              <input type="text" placeholder="Weight (kg)">
+              <input type="text" placeholder="Height (cm)">
+              <input type="text" placeholder="Depth (cm)">
+              <input type="text" placeholder="Width (cm)">
+          </div>
+         
+          <button class="button">+ Create Trade</button>
+      </div>
+      <div clas="UploadImg">
+          <h2>Add your pictures</h2>
+          <div class="image-upload">
+              <div class="image-box">📷</div>
+              <div class="image-box">📷</div>
+              <div class="image-box">📷</div>
+              <div class="image-box">➕</div>
+          </div>
+      </div>
+  </div>
+
+
+
+  <div class="footer">
+    <div>
+        <h3>TRADEROO</h3>
+        <p>We help you find your dream trade</p>
+        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p>Legal status: Sole proprietorship</p>
+    </div>
+    <div>
+        <h3>Information</h3>
+        <a href="#">About</a>
+        <a href="#">Product</a>
+        <a href="#">Blog</a>
+    </div>
+    <div>
+        <h3>Company</h3>
+        <a href="#">Team</a>
+        <a href="#">Out Idea</a>
+        <a href="#">Our story</a>
+    </div>
+    <div>
+        <h3>Contact</h3>
+        <a href="#">Feedback</a>
+        <a href="#">Pricing</a>
+        <a href="#">Resources</a>
+    </div>
+  </div>
+  
 </body>
 </html>
