Corrected NavBar and finished Swipe page

--- a/Pages/Create.html
+++ b/Pages/Create.html
@@ -18,12 +18,14 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
-    <a href="Home.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Home</a>
-    <a href="Swipe.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Swipe</a>
-    <a href="AllTrades.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">All Trades</a>
-    <a href="Create.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Create Trade</a>
-    <a href="AboutUs.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">About us</a>
+  <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
+    <a class="NavPages" href="Home.html"> Traderoo</a>
+    <a class="NavPages" href="Home.html" >Home</a>
+    <a class="NavPages"href="Swipe.html" >Swipe</a>
+    <a class="NavPages"href="AllTrades.html" >All Trades</a>
+    <a class="NavPages"href="Create.html" >Create Trade</a>
+    <a class="NavPages"href="AboutUs.html" >About us</a>
+    <a class="NavPages"href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
   </nav>
 
   <h1>Create Trade</h1>
@@ -65,6 +67,9 @@
 
 
 
+  
+</body>
+<footer>
   <div class="footer">
     <div>
         <h3>TRADEROO</h3>
@@ -93,5 +98,5 @@
     </div>
   </div>
   
-</body>
+</footer>
 </html>
