--- a/Pages/Item.html
+++ b/Pages/Item.html
@@ -17,14 +17,16 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
-    <a href="Home.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Home</a>
-    <a href="Swipe.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Swipe</a>
-    <a href="AllTrades.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">All Trades</a>
-    <a href="Create.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Create Trade</a>
-    <a href="AboutUs.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">About us</a>
+  <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
+    <a class="NavPages" href="Home.html"> Traderoo</a>
+    <a class="NavPages" href="Home.html" >Home</a>
+    <a class="NavPages"href="Swipe.html" >Swipe</a>
+    <a class="NavPages"href="AllTrades.html" >All Trades</a>
+    <a class="NavPages"href="Create.html" >Create Trade</a>
+    <a class="NavPages"href="AboutUs.html" >About us</a>
+    <a class="NavPages"href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
   </nav>
-</body>
+
 
 
 <div class="Itemdetail">
@@ -107,36 +109,39 @@
         </div>
     </div>
 
+  </body>
 
 
-
-  <div class="footer">
-    <div>
-        <h3>TRADEROO</h3>
-        <p>We help you find your dream trade</p>
-        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
-        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
-        <p>Legal status: Sole proprietorship</p>
+  <footer>
+    <div class="footer">
+      <div>
+          <h3>TRADEROO</h3>
+          <p>We help you find your dream trade</p>
+          <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
+          <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+          <p>Legal status: Sole proprietorship</p>
+      </div>
+      <div>
+          <h3>Information</h3>
+          <a href="#">About</a>
+          <a href="#">Product</a>
+          <a href="#">Blog</a>
+      </div>
+      <div>
+          <h3>Company</h3>
+          <a href="#">Team</a>
+          <a href="#">Out Idea</a>
+          <a href="#">Our story</a>
+      </div>
+      <div>
+          <h3>Contact</h3>
+          <a href="#">Feedback</a>
+          <a href="#">Pricing</a>
+          <a href="#">Resources</a>
+      </div>
     </div>
-    <div>
-        <h3>Information</h3>
-        <a href="#">About</a>
-        <a href="#">Product</a>
-        <a href="#">Blog</a>
-    </div>
-    <div>
-        <h3>Company</h3>
-        <a href="#">Team</a>
-        <a href="#">Out Idea</a>
-        <a href="#">Our story</a>
-    </div>
-    <div>
-        <h3>Contact</h3>
-        <a href="#">Feedback</a>
-        <a href="#">Pricing</a>
-        <a href="#">Resources</a>
-    </div>
-  </div>
+    
+  </footer>
   
 </div>
 </html>
