--- a/Pages/Swipe.html
+++ b/Pages/Swipe.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <link href="Swipe.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
   <style>
     a:hover {
       color: black; /* Hover-Effekt */
@@ -13,12 +18,73 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
-    <a href="Home.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Home</a>
-    <a href="Swipe.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Swipe</a>
-    <a href="AllTrades.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">All Trades</a>
-    <a href="Create.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">Create Trade</a>
-    <a href="AboutUs.html" style="margin: 0 15px; color: gray; text-decoration: none; font-size: 16px;">About us</a>
+  <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
+    <a class="NavPages" href="Home.html"> Traderoo</a>
+    <a class="NavPages" href="Home.html" >Home</a>
+    <a class="NavPages"href="Swipe.html" >Swipe</a>
+    <a class="NavPages"href="AllTrades.html" >All Trades</a>
+    <a class="NavPages"href="Create.html" >Create Trade</a>
+    <a class="NavPages"href="AboutUs.html" >About us</a>
+    <a class="NavPages"href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
   </nav>
+
+  <div class="Swipe">
+    <center>
+    <p class="heading"><strong>Swipe into your new Match</strong></p>
+    <p class="subtitle">Trade your pre-loved items with ease – swipe to find a match!</p>
+  </center>
+
+  <div class="card-container">
+    <div class="Explaination">
+      <p class="heading"><strong>How it works</strong></p>
+      <p class="Steps">Browse Items: "Swipe through items available for trade in your area."</p>
+      <p class="Steps">Match & Connect: "Swipe right to match with an item and connect with the owner."</p>
+      <p class="Steps">Trade and Enjoy: "Arrange the trade and enjoy your new item!"</p>
+    </div>
+    <div class="card">
+      <img src="../table.jpg">
+      <h4>Airpods Max</h4>
+      <p>Posted by <strong>Joseph Blättler</strong></p>
+      <p>The Airpods are 2 years old and are in near excellent Condition. I also still have the ...</p>
+      <p>432 Views</p>
+      <a href="#" class="SwipeLeft"> <i class="fa-solid fa-heart"></i></a>
+      <a href="#" class="SwipeRight"><i class="fa-solid fa-xmark"></i></a>
+     
+  </div>
+  </div>
+  </div>
+
+
+
 </body>
+<footer>
+  <div class="footer">
+    <div>
+        <h3>TRADEROO</h3>
+        <p>We help you find your dream trade</p>
+        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p>Legal status: Sole proprietorship</p>
+    </div>
+    <div>
+        <h3>Information</h3>
+        <a href="#">About</a>
+        <a href="#">Product</a>
+        <a href="#">Blog</a>
+    </div>
+    <div>
+        <h3>Company</h3>
+        <a href="#">Team</a>
+        <a href="#">Out Idea</a>
+        <a href="#">Our story</a>
+    </div>
+    <div>
+        <h3>Contact</h3>
+        <a href="#">Feedback</a>
+        <a href="#">Pricing</a>
+        <a href="#">Resources</a>
+    </div>
+  </div>
+  
+</footer>
 </html>
