Created Css Pages, facing some issues currently

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <link href="YourProfile.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
   <style>
     a:hover {
       color: black; /* Hover-Effekt */
@@ -13,7 +18,7 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
+  <nav class="NavBar" >
     <a class="NavPages" href="Home.html"> Traderoo</a>
     <a class="NavPages" href="Home.html" >Home</a>
     <a class="NavPages"href="Swipe.html" >Swipe</a>
@@ -24,5 +29,43 @@
   </nav>
 
   
+  <div class="Introduction">
+  <center>
+  <h1 class="heading">About Us</h1>
+  <p class="subtitle">At Traderoo, we believe in the power of exchange. We aim to create a community where people can trade what they have for what they need.
+     Our platform is built on trust, simplicity, and the joy of giving value in new, innovative ways.</p>
+  </center>  
+  </div>
+  
 </body>
+<footer>
+  <div class="footer">
+    <div>
+        <h3>TRADEROO</h3>
+        <p>We help you find your dream trade</p>
+        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p>Legal status: Sole proprietorship</p>
+    </div>
+    <div>
+        <h3>Information</h3>
+        <a href="#">About</a>
+        <a href="#">Product</a>
+        <a href="#">Blog</a>
+    </div>
+    <div>
+        <h3>Company</h3>
+        <a href="#">Team</a>
+        <a href="#">Out Idea</a>
+        <a href="#">Our story</a>
+    </div>
+    <div>
+        <h3>Contact</h3>
+        <a href="#">Feedback</a>
+        <a href="#">Pricing</a>
+        <a href="#">Resources</a>
+    </div>
+  </div>
+  
+</footer>
 </html>
