--- a/Pages/YourProfile.html
+++ b/Pages/YourProfile.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <link href="YourProfile.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
   <style>
     a:hover {
       color: black; /* Hover-Effekt */
@@ -23,4 +28,34 @@
     <a class="NavPages"href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
   </nav>
 </body>
+<footer>
+  <div class="footer">
+    <div>
+        <h3>TRADEROO</h3>
+        <p>We help you find your dream trade</p>
+        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p>Legal status: Sole proprietorship</p>
+    </div>
+    <div>
+        <h3>Information</h3>
+        <a href="#">About</a>
+        <a href="#">Product</a>
+        <a href="#">Blog</a>
+    </div>
+    <div>
+        <h3>Company</h3>
+        <a href="#">Team</a>
+        <a href="#">Out Idea</a>
+        <a href="#">Our story</a>
+    </div>
+    <div>
+        <h3>Contact</h3>
+        <a href="#">Feedback</a>
+        <a href="#">Pricing</a>
+        <a href="#">Resources</a>
+    </div>
+  </div>
+  
+</footer>
 </html>
