finished About Us page

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -1,71 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-  <link href="YourProfile.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
-  <style>
-    a:hover {
-      color: black; /* Hover-Effekt */
-      font-weight: bold; /* Fettgedruckt bei Hover */
-    }
-  </style>
-</head>
-<body>
-  <!-- Navigation -->
-  <nav class="NavBar" >
-    <a class="NavPages" href="Home.html"> Traderoo</a>
-    <a class="NavPages" href="Home.html" >Home</a>
-    <a class="NavPages"href="Swipe.html" >Swipe</a>
-    <a class="NavPages"href="AllTrades.html" >All Trades</a>
-    <a class="NavPages"href="Create.html" >Create Trade</a>
-    <a class="NavPages"href="AboutUs.html" >About us</a>
-    <a class="NavPages"href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link href="AboutUs.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/d782156bec.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      a:hover {
+        color: black; /* Hover-Effekt */
+        font-weight: bold; /* Fettgedruckt bei Hover */
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav class="NavBar">
+      <a class="NavPages" href="Home.html"> Traderoo</a>
+      <a class="NavPages" href="Home.html">Home</a>
+      <a class="NavPages" href="Swipe.html">Swipe</a>
+      <a class="NavPages" href="AllTrades.html">All Trades</a>
+      <a class="NavPages" href="Create.html">Create Trade</a>
+      <a class="NavPages" href="AboutUs.html">About us</a>
+      <a class="NavPages" href="YourProfile.html"
+        ><i class="fa-solid fa-user"></i
+      ></a>
+    </nav>
 
-  
-  <div class="Introduction">
-  <center>
-  <h1 class="heading">About Us</h1>
-  <p class="subtitle">At Traderoo, we believe in the power of exchange. We aim to create a community where people can trade what they have for what they need.
-     Our platform is built on trust, simplicity, and the joy of giving value in new, innovative ways.</p>
-  </center>  
-  </div>
-  
-</body>
-<footer>
-  <div class="footer">
-    <div>
+    <div class="Introduction">
+      <h1>About Us</h1>
+      <p>
+        At Traderoo, we believe in the power of exchange. We aim to create a
+        community where people can trade what they have for what they need. Our
+        platform is built on trust, simplicity, and the joy of giving value in
+        new, innovative ways.
+      </p>
+    </div>
+    <div class="Mission">
+      <h1>
+        Our Mission is to creating a world where everyone can find value in what
+        they already own.
+      </h1>
+      <p>
+        Whether you're looking to trade an old bicycle for a guitar or swap your
+        skills as a designer for home-cooked meals, Traderoo provides the tools
+        and platform to make these exchanges seamless and rewarding.
+      </p>
+      <a class="earth"><i class="fa-solid fa-earth-americas"></i></a>
+    </div>
+    <div class="container">
+      <div class="section">
+        <div class="text">
+          <h2>Our Vision</h2>
+          <p>
+            At Traderoo, we believe in the power of exchange. Whether its
+            swapping goods, services, or skills, we aim to create a community
+            where people can trade what they have for what they need, without
+            the complexities of traditional commerce.
+          </p>
+        </div>
+        <a class="icons"><i class="fa-solid fa-bullseye"></i></a>
+      </div>
+
+      <div class="section">
+        <a class="icons"><i class="fa-solid fa-rocket"></i></a>
+        <div class="text">
+          <h2>How we started</h2>
+          <p>
+            Traderoo was born out of a simple idea: Why let something valuable
+            go unused when someone else might need it? What started as a small
+            community of friends exchanging items has grown into a global
+            marketplace.
+          </p>
+        </div>
+      </div>
+
+      <div class="section">
+        <div class="text">
+          <h2>Our Values</h2>
+          <ul>
+            <li>
+              Community First: We believe in building a supportive, trustworthy
+              network.
+            </li>
+            <li>
+              Sustainability: By promoting trade, we reduce waste and encourage
+              sustainability.
+            </li>
+            <li>
+              Innovation: Were always looking for creative ways to improve the
+              trading experience.
+            </li>
+          </ul>
+        </div>
+        <a class="icons"><i class="fa-solid fa-hand-holding-heart"></i></a>
+      </div>
+    </div>
+    <div class="Team">
+      <h1>Meet the Team</h1>
+      <p>
+        Behind Traderoo is a passionate team of innovators, problem-solvers, and
+        community-builders who are dedicated to making trading a fun, easy, and
+        valuable experience for everyone.
+      </p>
+    </div>
+  </body>
+  <footer>
+    <div class="footer">
+      <div>
         <h3>TRADEROO</h3>
         <p>We help you find your dream trade</p>
-        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
-        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p><strong>Adress</strong><br />Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br />teamtraderoo@gmail.com</p>
         <p>Legal status: Sole proprietorship</p>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Information</h3>
         <a href="#">About</a>
         <a href="#">Product</a>
         <a href="#">Blog</a>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Company</h3>
         <a href="#">Team</a>
         <a href="#">Out Idea</a>
         <a href="#">Our story</a>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Contact</h3>
         <a href="#">Feedback</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
+      </div>
     </div>
-  </div>
-  
-</footer>
+  </footer>
 </html>
