--- a/Pages/YourProfile.html
+++ b/Pages/YourProfile.html
@@ -1,61 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-  <link href="YourProfile.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
-  <style>
-    a:hover {
-      color: black; /* Hover-Effekt */
-      font-weight: bold; /* Fettgedruckt bei Hover */
-    }
-  </style>
-</head>
-<body>
-  <!-- Navigation -->
-  <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
-    <a class="NavPages" href="Home.html"> Traderoo</a>
-    <a class="NavPages" href="Home.html" >Home</a>
-    <a class="NavPages"href="Swipe.html" >Swipe</a>
-    <a class="NavPages"href="AllTrades.html" >All Trades</a>
-    <a class="NavPages"href="Create.html" >Create Trade</a>
-    <a class="NavPages"href="AboutUs.html" >About us</a>
-    <a class="NavPages"href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
-  </nav>
-</body>
-<footer>
-  <div class="footer">
-    <div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link href="YourProfile.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/d782156bec.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      a:hover {
+        color: black; /* Hover-Effekt */
+        font-weight: bold; /* Fettgedruckt bei Hover */
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav
+      class="NavBar"
+      style="
+        text-align: center;
+        padding: 10px;
+        background-color: #fff;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+      "
+    >
+      <a class="NavPages" href="Home.html"> Traderoo</a>
+      <a class="NavPages" href="Home.html">Home</a>
+      <a class="NavPages" href="Swipe.html">Swipe</a>
+      <a class="NavPages" href="AllTrades.html">All Trades</a>
+      <a class="NavPages" href="Create.html">Create Trade</a>
+      <a class="NavPages" href="AboutUs.html">About us</a>
+      <a class="NavPages" href="YourProfile.html"
+        ><i class="fa-solid fa-user"></i
+      ></a>
+    </nav>
+
+    <div class="YourProfile">
+      <h1 class="heading">YourProfile</h1>
+      <p class="subtitle">Hello, Im Markus! Feel free to checkout my trades</p>
+      <input type="text" placeholder="search in Markus Trades" />
+    </div>
+    <div class="AllTradesbutton">
+      <button class="example-btn2">View matches</button>
+      <button class="example-btn2">See more</button>
+      <button class="example-btn2">Create new Trade</button>
+    </div>
+
+    <div class="card-container">
+      <div class="profile-card">
+        <div class="name">Markus Rieder</div>
+        <div class="username">markusrieder22</div>
+        <div class="level">Level 14 Trader</div>
+        <div class="stats">👥 13 Follower | 6 Following</div>
+        <div class="stats">🔄 35 Successful Trades</div>
+        <div class="stars">★★★★★ 4.5</div>
+        <a href="#" class="btn">⬆ Upgrade plan</a>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Table Lamp</h4>
+        <p>Warm shade, bought 2 years ago, cozy glow.</p>
+        <button class="match-button">Edit</button>
+        <p>140 Views</p>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Area Rug</h4>
+        <p>Soft, neutral rug with a small corner stain.</p>
+        <button class="match-button">Edit</button>
+        <p>56 Views</p>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Office Chair</h4>
+        <p>Ergonomic, 1 year old, adjustable height.</p>
+        <button class="match-button">Edit</button>
+        <p>39 Views</p>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Office Chair</h4>
+        <p>Ergonomic, 1 year old, adjustable height.</p>
+        <button class="match-button">Edit</button>
+        <p>39 Views</p>
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Table Lamp</h4>
+        <p>Warm shade, bought 2 years ago, cozy glow.</p>
+        <button class="match-button">Edit</button>
+        <p>140 Views</p>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Office Chair</h4>
+        <p>Ergonomic, 1 year old, adjustable height.</p>
+        <button class="match-button">Edit</button>
+        <p>39 Views</p>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Office Chair</h4>
+        <p>Ergonomic, 1 year old, adjustable height.</p>
+        <button class="match-button">Edit</button>
+        <p>39 Views</p>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Area Rug</h4>
+        <p>Soft, neutral rug with a small corner stain.</p>
+        <button class="match-button">Edit</button>
+        <p>56 Views</p>
+      </div>
+      <div class="card">
+        <img src="../table.jpg" />
+        <h4>Office Chair</h4>
+        <p>Ergonomic, 1 year old, adjustable height.</p>
+        <button class="match-button">Edit</button>
+        <p>39 Views</p>
+      </div>
+    </div>
+    <center>
+      <button class="example-btn2">View more</button>
+    </center>
+  </body>
+  <footer>
+    <div class="footer">
+      <div>
         <h3>TRADEROO</h3>
         <p>We help you find your dream trade</p>
-        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
-        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p><strong>Adress</strong><br />Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br />teamtraderoo@gmail.com</p>
         <p>Legal status: Sole proprietorship</p>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Information</h3>
         <a href="#">About</a>
         <a href="#">Product</a>
         <a href="#">Blog</a>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Company</h3>
         <a href="#">Team</a>
         <a href="#">Out Idea</a>
         <a href="#">Our story</a>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Contact</h3>
         <a href="#">Feedback</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
+      </div>
     </div>
-  </div>
-  
-</footer>
+  </footer>
 </html>
