Created Login function without dbconnection

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -31,8 +31,11 @@
           <div class="forgot-password">
               <a href="#">Forgot?</a>
           </div>
-          <a href="Home.html" type="submit" class="btn">Login now</a>
+          <button href="Home.html" type="submit" id="loginButton" class="btn">Login now</button>
+          
       </form>
+      <p id="message"></p>
+            <script src="login.js"></script>
       <div class="signup-link">
           Don't Have An Account? <a href="Register.html">Sign Up</a>
       </div>
