changed Icons on Home page and fixed marging under the navbar

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -67,7 +67,7 @@
 
   <div class="SolImg">
       <div class="col">
-        <i class="fa-brands fa-docker fa-5x"></i>
+        <i class="fa-solid fa-handshake fa-5x"></i>
           <ul>
               <li class="city">Easy Trades</li>
               <li class="date">We connect you with countless opportunities for great trades, to help you find the perfect match.</li>
@@ -75,7 +75,7 @@
   </div>
   
   <div class=" col">
-    <i class="fa-brands fa-docker fa-5x"></i>
+    <i class="fa-solid fa-earth-americas fa-5x"></i>
       <ul>
           <li class="city">Save the Planet</li>
           <li class="date"> Reduce waste and your carbon footprint by trading pre-owned items instead of buying new ones.</li>
@@ -84,7 +84,7 @@
   </div>
   
   <div class=" col">
-    <i class="fa-brands fa-docker fa-5x"></i>
+    <i class="fa-solid fa-phone fa-5x"></i>
       <ul>
           <li class="city">24/7 Support</li>
           <li class="date">Get real-time support for any Traderoo inquiry 24/7 to ensure a smooth trading experience.</li>
