linked all relative buttons, the footer too. fixed review page and some small details

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -131,13 +131,13 @@
       </div>
       <div>
         <h3>Company</h3>
-        <a href="#">Team</a>
-        <a href="#">Out Idea</a>
-        <a href="#">Our story</a>
+        <a href="AboutUs.html">Team</a>
+        <a href="AboutUs.html">Out Idea</a>
+        <a href="AboutUs.html">Our story</a>
       </div>
       <div>
         <h3>Contact</h3>
-        <a href="#">Feedback</a>
+        <a href="Review.html">Feedback</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
       </div>
