--- a/Pages/Item.html
+++ b/Pages/Item.html
@@ -45,7 +45,7 @@
     </div>
     <div class="buttons">
         <button class="btn">Ask a question</button>
-        <button class="btn">View Profile</button>
+        <a href="YourProfile.html"><button class="btn">View Profile</button></a>
     </div>
     <div class="description">
         Trading this modern, minimalist nightstand in excellent condition. Its got two drawers—perfect for storing your bedside essentials like books, chargers, or whatever you need to keep handy. The color is a light grey/off-white with a smooth matte finish, so it blends easily with most decor styles.
@@ -76,35 +76,35 @@
             <img src="../table.jpg">
             <h4>Table Lamp</h4>
             <p>Warm shade, bought 2 years ago, cozy glow.</p>
-            <button class="match-button">Match</button>
+            <a href="Item.html"><button class="match-button">Match</button></a>
             <p>140 Views</p>
         </div>
         <div class="card">
           <img src="../table.jpg">
             <h4>Area Rug</h4>
             <p>Soft, neutral rug with a small corner stain.</p>
-            <button class="match-button">Match</button>
+            <a href="Item.html"><button class="match-button">Match</button></a>
             <p>56 Views</p>
         </div>
         <div class="card">
           <img src="../table.jpg">
             <h4>Office Chair</h4>
             <p>Ergonomic, 1 year old, adjustable height.</p>
-            <button class="match-button">Match</button>
+            <a href="Item.html"><button class="match-button">Match</button></a>
             <p>39 Views</p>
         </div>
         <div class="card">
           <img src="../table.jpg">
             <h4>Old Vase</h4>
             <p>Sleek ceramic vase, perfect for decor.</p>
-            <button class="match-button">Match</button>
+            <a href="Item.html"><button class="match-button">Match</button></a>
             <p>170 Views</p>
         </div>
         <div class="card">
           <img src="../table.jpg">
             <h4>Old Vase</h4>
             <p>Sleek ceramic vase, perfect for decor.</p>
-            <button class="match-button">Match</button>
+            <a href="Item.html"><button class="match-button">Match</button></a>
             <p>170 Views</p>
         </div>
     </div>
@@ -129,13 +129,13 @@
       </div>
       <div>
           <h3>Company</h3>
-          <a href="#">Team</a>
-          <a href="#">Out Idea</a>
-          <a href="#">Our story</a>
+          <a href="AboutUs.html">Team</a>
+          <a href="AboutUs.html">Out Idea</a>
+          <a href="AboutUs.html">Our story</a>
       </div>
       <div>
           <h3>Contact</h3>
-          <a href="#">Feedback</a>
+          <a href="Review.html">Feedback</a>
           <a href="#">Pricing</a>
           <a href="#">Resources</a>
       </div>
