--- a/Pages/Review.html
+++ b/Pages/Review.html
@@ -50,11 +50,12 @@
           Share your experience and help others make great trades!
         </p>
       </center>
+
       <div class="review-card">
         <div class="user-info">
           <span class="username">Markus Rieder</span>
-          <button class="btn black">View Trades</button>
-          <button class="btn black">Go to Chat</button>
+          <button class="btnMore">View Trades</button>
+          <button class="btnMore">Go to Chat</button>
         </div>
 
         <div class="trade-info">
@@ -82,7 +83,7 @@
           </div>
         </div>
 
-        <button class="create-review-btn">✅ Create Review</button>
+        <button class="create-review-btn">Create Review</button>
       </div>
     </div>
   </body>
@@ -103,13 +104,13 @@
       </div>
       <div>
         <h3>Company</h3>
-        <a href="#">Team</a>
-        <a href="#">Out Idea</a>
-        <a href="#">Our story</a>
+        <a href="AboutUs.html">Team</a>
+        <a href="AboutUs.html">Out Idea</a>
+        <a href="AboutUs.html">Our story</a>
       </div>
       <div>
         <h3>Contact</h3>
-        <a href="#">Feedback</a>
+        <a href="Review.html">Feedback</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
       </div>
