--- a/Pages/YourProfile.html
+++ b/Pages/YourProfile.html
@@ -51,8 +51,12 @@
     </div>
     <div class="AllTradesbutton">
       <button class="example-btn2">View matches</button>
-      <button class="example-btn2">See more</button>
-      <button class="example-btn2">Create new Trade</button>
+      <a href="AllTrades.html"
+        ><button class="example-btn2">See more</button></a
+      >
+      <a href="Create.html"
+        ><button class="example-btn2">Create new Trade</button></a
+      >
     </div>
 
     <div class="card-container">
@@ -152,13 +156,13 @@
       </div>
       <div>
         <h3>Company</h3>
-        <a href="#">Team</a>
-        <a href="#">Out Idea</a>
-        <a href="#">Our story</a>
+        <a href="AboutUs.html">Team</a>
+        <a href="AboutUs.html">Out Idea</a>
+        <a href="AboutUs.html">Our story</a>
       </div>
       <div>
         <h3>Contact</h3>
-        <a href="#">Feedback</a>
+        <a href="Review.html">Feedback</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
       </div>
