--- a/Pages/AllTrades.html
+++ b/Pages/AllTrades.html
@@ -36,10 +36,10 @@
       <a class="NavPages" href="Create.html">Create Trade</a>
       <a class="NavPages" href="AboutUs.html">About us</a>
       <a class="NavPages" href="YourProfile.html"
-        ><i class="fa-solid fa-user"></i
+        ><i class="fa-solid fa-user" aria-hidden="true"></i
       ></a>
     </nav>
-
+<center>
     <div class="AllTrades">
       <h1 class="heading">All Trades</h1>
       <p class="subtitle">
@@ -50,56 +50,57 @@
     </div>
     <div class="AllTradesbutton">
       <button class="example-btn2">See more</button>
-      <button class="example-btn2">Create own Trade</button>
+      <a href="Create.html"> <button class="example-btn2">Create own Trade</button></a>
     </div>
+  </center>
     <div class="card-container">
       <div class="card">
           <img src="../table.jpg">
           <h4>Table Lamp</h4>
           <p>Warm shade, bought 2 years ago, cozy glow.</p>
-          <button class="match-button">Match</button>
+          <a href="Item.html"><button class="match-button">Match</button></a>
           <p>140 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg">
           <h4>Area Rug</h4>
           <p>Soft, neutral rug with a small corner stain.</p>
-          <button class="match-button">Match</button>
+          <a href="Item.html"><button class="match-button">Match</button></a>
           <p>56 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg">
           <h4>Office Chair</h4>
           <p>Ergonomic, 1 year old, adjustable height.</p>
-          <button class="match-button">Match</button>
+          <a href="Item.html"><button class="match-button">Match</button></a>
           <p>39 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg">
           <h4>Old Vase</h4>
           <p>Sleek ceramic vase, perfect for decor.</p>
-          <button class="match-button">Match</button>
+          <a href="Item.html"><button class="match-button">Match</button></a>
           <p>170 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg">
           <h4>Old Vase</h4>
           <p>Sleek ceramic vase, perfect for decor.</p>
-          <button class="match-button">Match</button>
+          <a href="Item.html"><button class="match-button">Match</button></a>
           <p>170 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg">
           <h4>Old Vase</h4>
           <p>Sleek ceramic vase, perfect for decor.</p>
-          <button class="match-button">Match</button>
+          <a href="Item.html"><button class="match-button">Match</button></a>
           <p>170 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg">
           <h4>Old Vase</h4>
           <p>Sleek ceramic vase, perfect for decor.</p>
-          <button class="match-button">Match</button>
+          <a href="Item.html"><button class="match-button">Match</button></a>
           <p>170 Views</p>
       </div>
   </div>
@@ -109,49 +110,49 @@
         <img src="../table.jpg">
         <h4>Table Lamp</h4>
         <p>Warm shade, bought 2 years ago, cozy glow.</p>
-        <button class="match-button">Match</button>
+        <a href="Item.html"><button class="match-button">Match</button></a>
         <p>140 Views</p>
     </div>
     <div class="card">
       <img src="../table.jpg">
         <h4>Area Rug</h4>
         <p>Soft, neutral rug with a small corner stain.</p>
-        <button class="match-button">Match</button>
+        <a href="Item.html"><button class="match-button">Match</button></a>
         <p>56 Views</p>
     </div>
     <div class="card">
       <img src="../table.jpg">
         <h4>Office Chair</h4>
         <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Match</button>
+        <a href="Item.html"><button class="match-button">Match</button></a>
         <p>39 Views</p>
     </div>
     <div class="card">
       <img src="../table.jpg">
         <h4>Old Vase</h4>
         <p>Sleek ceramic vase, perfect for decor.</p>
-        <button class="match-button">Match</button>
+        <a href="Item.html"><button class="match-button">Match</button></a>
         <p>170 Views</p>
     </div>
     <div class="card">
       <img src="../table.jpg">
         <h4>Old Vase</h4>
         <p>Sleek ceramic vase, perfect for decor.</p>
-        <button class="match-button">Match</button>
+        <a href="Item.html"><button class="match-button">Match</button></a>
         <p>170 Views</p>
     </div>
     <div class="card">
       <img src="../table.jpg">
         <h4>Old Vase</h4>
         <p>Sleek ceramic vase, perfect for decor.</p>
-        <button class="match-button">Match</button>
+        <a href="Item.html"><button class="match-button">Match</button></a>
         <p>170 Views</p>
     </div>
     <div class="card">
       <img src="../table.jpg">
         <h4>Old Vase</h4>
         <p>Sleek ceramic vase, perfect for decor.</p>
-        <button class="match-button">Match</button>
+        <a href="Item.html"><button class="match-button">Match</button></a>
         <p>170 Views</p>
     </div>
 </div>
@@ -160,49 +161,49 @@
       <img src="../table.jpg">
       <h4>Table Lamp</h4>
       <p>Warm shade, bought 2 years ago, cozy glow.</p>
-      <button class="match-button">Match</button>
+      <a href="Item.html"><button class="match-button">Match</button></a>
       <p>140 Views</p>
   </div>
   <div class="card">
     <img src="../table.jpg">
       <h4>Area Rug</h4>
       <p>Soft, neutral rug with a small corner stain.</p>
-      <button class="match-button">Match</button>
+      <a href="Item.html"><button class="match-button">Match</button></a>
       <p>56 Views</p>
   </div>
   <div class="card">
     <img src="../table.jpg">
       <h4>Office Chair</h4>
       <p>Ergonomic, 1 year old, adjustable height.</p>
-      <button class="match-button">Match</button>
+      <a href="Item.html"><button class="match-button">Match</button></a>
       <p>39 Views</p>
   </div>
   <div class="card">
     <img src="../table.jpg">
       <h4>Old Vase</h4>
       <p>Sleek ceramic vase, perfect for decor.</p>
-      <button class="match-button">Match</button>
+      <a href="Item.html"><button class="match-button">Match</button></a>
       <p>170 Views</p>
   </div>
   <div class="card">
     <img src="../table.jpg">
       <h4>Old Vase</h4>
       <p>Sleek ceramic vase, perfect for decor.</p>
-      <button class="match-button">Match</button>
+      <a href="Item.html"><button class="match-button">Match</button></a>
       <p>170 Views</p>
   </div>
   <div class="card">
     <img src="../table.jpg">
       <h4>Old Vase</h4>
       <p>Sleek ceramic vase, perfect for decor.</p>
-      <button class="match-button">Match</button>
+      <a href="Item.html"><button class="match-button">Match</button></a>
       <p>170 Views</p>
   </div>
   <div class="card">
     <img src="../table.jpg">
       <h4>Old Vase</h4>
       <p>Sleek ceramic vase, perfect for decor.</p>
-      <button class="match-button">Match</button>
+      <a href="Item.html"><button class="match-button">Match</button></a>
       <p>170 Views</p>
   </div>
 </div>
@@ -226,13 +227,13 @@
     </div>
     <div>
       <h3>Company</h3>
-      <a href="#">Team</a>
-      <a href="#">Out Idea</a>
-      <a href="#">Our story</a>
+      <a href="AboutUs.html">Team</a>
+      <a href="AboutUs.html">Out Idea</a>
+      <a href="AboutUs.html">Our story</a>
     </div>
     <div>
       <h3>Contact</h3>
-      <a href="#">Feedback</a>
+      <a href="Review.html">Feedback</a>
       <a href="#">Pricing</a>
       <a href="#">Resources</a>
     </div>
