--- a/Pages/Create.html
+++ b/Pages/Create.html
@@ -1,102 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-  <link href="Create.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/d782156bec.js" crossorigin="anonymous"></script>
-  <title>Home</title>
-  <style>
-    a:hover {
-      color: black; /* Hover-Effekt */
-      font-weight: bold; /* Fettgedruckt bei Hover */
-    }
-  </style>
-</head>
-<body>
-  <!-- Navigation -->
-  <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
-    <a class="NavPages" href="Home.html"> Traderoo</a>
-    <a class="NavPages" href="Home.html" >Home</a>
-    <a class="NavPages"href="Swipe.html" >Swipe</a>
-    <a class="NavPages"href="AllTrades.html" >All Trades</a>
-    <a class="NavPages"href="Create.html" >Create Trade</a>
-    <a class="NavPages"href="AboutUs.html" >About us</a>
-    <a class="NavPages"href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
-  </nav>
-
-  <h1>Create Trade</h1>
-  <h2>Add trade information</h2>
-  <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link href="Create.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/d782156bec.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Home</title>
+    <style>
+      a:hover {
+        color: black; /* Hover-Effekt */
+        font-weight: bold; /* Fettgedruckt bei Hover */
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav
+      class="NavBar"
+      style="
+        text-align: center;
+        padding: 10px;
+        background-color: #fff;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+      "
+    >
+      <a class="NavPages" href="Home.html"> Traderoo</a>
+      <a class="NavPages" href="Home.html">Home</a>
+      <a class="NavPages" href="Swipe.html">Swipe</a>
+      <a class="NavPages" href="AllTrades.html">All Trades</a>
+      <a class="NavPages" href="Create.html">Create Trade</a>
+      <a class="NavPages" href="AboutUs.html">About us</a>
+      <a class="NavPages" href="YourProfile.html"
+        ><i class="fa-solid fa-user"></i
+      ></a>
+    </nav>
+    <center>
+      <div class="CreateTrades">
+        <h1>Create Trade</h1>
+        <p>Add the trade information here!</p>
+      </div>
+    </center>
+    <div class="container">
       <div class="trade-info">
-          
-          <div class="input-group">
-              <label>Title</label>
-              <input type="text" placeholder="Trade title (e.g., Bookshelf)">
-          </div>
-          <div class="input-group">
-              <label>Description</label>
-              <textarea placeholder="Write a short description..."></textarea>
-          </div>
-          <div class="input-group">
-              <label>Brand</label>
-              <input type="text" placeholder="Brand (e.g., IKEA, Custom-made)">
-          </div>
-          <div class="measurements">
-              <input type="text" placeholder="Weight (kg)">
-              <input type="text" placeholder="Height (cm)">
-              <input type="text" placeholder="Depth (cm)">
-              <input type="text" placeholder="Width (cm)">
-          </div>
-         
-          <button class="button">+ Create Trade</button>
+        <div class="input-group">
+          <label>Title</label>
+          <input type="text" placeholder="Trade title (e.g., Bookshelf)" />
+        </div>
+        <div class="input-group">
+          <label>Description</label>
+          <textarea placeholder="Write a short description..."></textarea>
+        </div>
+        <div class="input-group">
+          <label>Brand</label>
+          <input type="text" placeholder="Brand (e.g., IKEA, Custom-made)" />
+        </div>
+        <div class="measurements">
+          <input type="text" placeholder="Weight (kg)" />
+          <input type="text" placeholder="Height (cm)" />
+          <input type="text" placeholder="Depth (cm)" />
+          <input type="text" placeholder="Width (cm)" />
+        </div>
+
+        <button class="button">+ Create Trade</button>
       </div>
       <div clas="UploadImg">
-          <h2>Add your pictures</h2>
-          <div class="image-upload">
-              <div class="image-box">📷</div>
-              <div class="image-box">📷</div>
-              <div class="image-box">📷</div>
-              <div class="image-box">➕</div>
-          </div>
+        <h2>Add your pictures</h2>
+        <div class="image-upload">
+          <div class="image-box">📷</div>
+          <div class="image-box">📷</div>
+          <div class="image-box">📷</div>
+          <div class="image-box">➕</div>
+        </div>
       </div>
-  </div>
-
-
-
-  
-</body>
-<footer>
-  <div class="footer">
-    <div>
+    </div>
+  </body>
+  <footer>
+    <div class="footer">
+      <div>
         <h3>TRADEROO</h3>
         <p>We help you find your dream trade</p>
-        <p><strong>Adress</strong><br>Lucerne 6002, Switzerland</p>
-        <p><strong>Contact</strong><br>teamtraderoo@gmail.com</p>
+        <p><strong>Adress</strong><br />Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br />teamtraderoo@gmail.com</p>
         <p>Legal status: Sole proprietorship</p>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Information</h3>
         <a href="#">About</a>
         <a href="#">Product</a>
         <a href="#">Blog</a>
-    </div>
-    <div>
+      </div>
+      <div>
         <h3>Company</h3>
-        <a href="#">Team</a>
-        <a href="#">Out Idea</a>
-        <a href="#">Our story</a>
-    </div>
-    <div>
+        <a href="AboutUs.html">Team</a>
+        <a href="AboutUs.html">Out Idea</a>
+        <a href="AboutUs.html">Our story</a>
+      </div>
+      <div>
         <h3>Contact</h3>
-        <a href="#">Feedback</a>
+        <a href="Review.html">Feedback</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
+      </div>
     </div>
-  </div>
-  
-</footer>
+  </footer>
 </html>
