--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -34,7 +34,7 @@
     <div class="mostviewed-div">
         <h1>Most Viewed Trades Today</h1>
         <p>An eco-friendly way to discover unique pieces and help save the planet, one trade at a time</p>
-        <button class="example-btn2">See more</button>
+        <a href="AllTrades.html"><button class="example-btn2">See more</button></a>
     </div>
     <div class="mostviewed-img">
         <div class="table-container">
@@ -123,7 +123,7 @@
 </div>
  
   <center>
-    <button class="example-btn2">See more</button>
+    <a href="AllTrades.html"><button class="example-btn2">See more</button></a>
 </center>
 </div>
 
@@ -166,13 +166,13 @@
     </div>
     <div>
         <h3>Company</h3>
-        <a href="#">Team</a>
-        <a href="#">Out Idea</a>
-        <a href="#">Our story</a>
+        <a href="AboutUs.html">Team</a>
+        <a href="AboutUs.html">Out Idea</a>
+        <a href="AboutUs.html">Our story</a>
     </div>
     <div>
         <h3>Contact</h3>
-        <a href="#">Feedback</a>
+        <a href="Review.html">Feedback</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
     </div>
