created database connection finally

--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -23,6 +23,7 @@
             <h2>Create an account</h2>
             <form>
                 <div class="form-group">
+                    <script defer src="register.js"></script>
                     <label for="Username">Username</label>
                     <input type="text" id="Username" placeholder="test" required />
                 </div>
